<resources>
    <string name="app_name">WorkoutManager</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_training">Training</string>
    <string name="title_diary">Diary</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
