<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_24px"
        android:title="@string/title_calendar"/>

    <item
        android:id="@+id/navigation_training"
        android:icon="@drawable/ic_training_24px"
        android:title="@string/title_training"/>

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_diary_24px"
        android:title="@string/title_diary"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/title_settings"/>

</menu>
